# kitya

./: .gitignore  Makefile  hie.yaml  k.hs  k_rm_comm.hs  kitya.hs  readme.adoc  test.hs
map/: .gitignore  Makefile  ast  hie.yaml  imagemap.js  logo.js  map.cabal  map.hs  map.html  package-lock.json  stack.yaml  template.html
map/garmin/: dl.sh
